# infinitas-skill

./: .dockerignore  .env.compose.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  openapi.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.backup/templates/: index-kawaii.html  index.html  layout-kawaii.html  reviews.html  submissions.html
.github/workflows/: container-image.yml  release-attestation.yml  validate.yml
.learnings/: ERRORS.md  LEARNINGS.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
alembic/: env.py
alembic/versions/: 0001_initial.py  20260329_0001_bootstrap_alembic.py  20260329_0002_release_graph.py  20260329_0003_exposure_access_review.py  20260329_0004_private_first_cutover.py  20260329_0005_personal_token_hash_cutover.py  20260405_0006_add_job_leases.py  20260419_0007_registry_objects_and_draft_content.py  20260420_0008_add_release_platform_compatibility_json.py  20260424_0001_product_tokens_and_share_links.py  20260601_0009_add_composite_indexes.py  20260601_0010_add_rate_limit_entries_table.py  20260602_0011_remove_registry_object_abstraction.py  20260604_0012_add_performance_indexes.py  20260611_0013_add_fk_constraints_and_indexes.py  20260611_0014_add_remaining_fk_indexes.py  52ab6f2e589e_add_user_password_hash.py  5b144d756fe3_add_release_platform_compatibility_json.py  6fe6c7710a23_drop_user_unused_columns.py  df25325e7fd0_drop_share_links.py  e8763ef508a1_drop_skill_drafts_and_created_from_.py
catalog/: active.json  ai-index.json  audit-export.json  catalog.json  compatibility.json  discovery-index.json  distributions.json  inventory-export.json  registries.json
catalog/provenance/: consume-infinitas-skill-0.1.0.json  consume-infinitas-skill-0.1.0.json.ssig  consume-infinitas-skill-0.1.1.json  consume-infinitas-skill-0.1.1.json.ssig  federation-registry-ops-0.1.0.json  federation-registry-ops-0.1.0.json.ssig  federation-registry-ops-0.1.1.json  federation-registry-ops-0.1.1.json.ssig  operate-infinitas-skill-0.1.1.json  operate-infinitas-skill-0.1.1.json.ssig  operate-infinitas-skill-0.1.2.json  operate-infinitas-skill-0.1.2.json.ssig  release-infinitas-skill-0.1.0.json  release-infinitas-skill-0.1.0.json.ssig  release-infinitas-skill-0.1.1.json  release-infinitas-skill-0.1.1.json.ssig
config/: allowed_signers  compatibility-policy.json  install-integrity-policy.json  registry-sources.json  signing.json
docker/: bootstrap-runtime-repo.py  entrypoint-hosted.sh
docs/: README.md  compatibility-contract.md  compatibility-matrix.md  conventions.md  dark-mode-audit-v2.md  dark-mode-audit.md  distribution-manifests.md  federation-operations.md  fixes-applied.md  history-and-snapshots.md  implementation-examples.md  installed-skill-integrity.md  kawaii-enhancement-plan.md  kawaii-theme-demo.md  kawaii-theme-design.md  lifecycle.md  metadata-schema.md  multi-registry.md  platform-drift-playbook.md  platform-review-memo.md  policy-packs.md  private-first-cutover.md  project-closeout.md  promotion-policy.md  registry-refresh-policy.md  registry-snapshot-mirrors.md  release-checklist.md  release-strategy.md  review-workflow.md  signing-bootstrap.md  signing-operations.md  theme-migration-guide.md  theme-preview.md  trust-model.md  ui-ux-code-audit-report.md  v2-migration-guide.md
docs/adr/: 0001-maintainability-reset.md  0002-maintained-surface-cutover.md  0003-openclaw-runtime-canonical.md
docs/ai/: README.md  agent-operations.md  (+13 more)
policy/: exception-policy.json  namespace-policy.json  policy-packs.json  promotion-policy.json  team-policy.json
profiles/: claude.json  codex.json  openclaw.json
schemas/: agent-code.schema.json  agent-preset.schema.json  ai-index.schema.json  audit-export.schema.json  compatibility-policy.schema.json  discovery-index.schema.json  distribution-manifest.schema.json  exception-policy.schema.json  install-integrity-policy.schema.json  install-manifest.schema.json  installed-integrity-snapshot.schema.json  inventory-export.schema.json  namespace-policy.schema.json  platform-profile.schema.json  policy-pack-selection.schema.json  policy-pack.schema.json  promotion-policy.schema.json  provenance.schema.json  publish-result.schema.json  pull-result.schema.json  registry-sources.schema.json  review-evidence.schema.json  reviews.schema.json  signing.schema.json  skill-canonical.schema.json  skill-meta.schema.json  team-policy.schema.json  transparency-log-entry.schema.json
scripts/: ai_index_lib.py  approve-skill.sh  attestation_lib.py  backfill-distribution-manifests.py  backup-hosted-registry.py  backup-hosted.py  bootstrap-signing.py  build-asset-hashes.js  build-catalog.sh  bump-skill-version.sh  canonical_skill_lib.py  check-all.sh  check-catalog-exports.py  check-claude-compat.py  check-codex-compat.py  check-install-target.py  check-openclaw-compat.py  check-platform-contracts.py  check-policy-packs.py  check-promotion-policy.py  check-registry-integrity.py  check-registry-sources.py  check-release-state.py  check-signing-config.py  check-skill-update.sh  check-skill.sh  clean_decorative_comments.py  compatibility_evidence_lib.py  compatibility_policy_lib.py  create-registry-snapshot.py  decision_metadata_lib.py  dependency_lib.py  diff-skill.sh  discovery_index_lib.py  discovery_resolver_lib.py  distribution_lib.py  doctor-signing.py  exception_policy_lib.py  explain_install_lib.py  export-claude-skill.sh  (+224 more)
server/: app.py  artifact_ops.py  auth.py  auth_guards.py  bootstrap.py  db.py  exceptions.py  exceptions_base.py  i18n.py  jobs.py  lifecycle.py  logging.py  middleware.py  model_registry.py  models.py  pagination.py  rate_limit.py  repo_ops.py  runtime_repo.py  schemas.py  security.py  settings.py  static_files.py  ui_service.py  worker.py
tests/: __init__.py  conftest.py
(+947 files in other folders)
