[build-system]
requires = [ "setuptools>=69",]
build-backend = "setuptools.build_meta"

[project]
name = "infinitas-hosted-registry"
version = "0.1.0"
description = "Hosted control plane for the infinitas private skill registry"
license = "MIT"
requires-python = ">=3.11"
dependencies = [ "alembic>=1.16,<2", "bcrypt>=4.1,<5", "cryptography>=49,<50", "fastapi>=0.139,<1", "httpx>=0.28,<1", "jinja2>=3.1,<4", "psycopg[binary]>=3.2,<4", "sqlalchemy>=2.0,<3", "starlette>=1.3.1,<2", "uvicorn>=0.35,<1",]

[dependency-groups]
dev = [
  "mypy>=1.8,<2",
  "pip-audit>=2.7,<3",
  "pytest>=9.0.3,<10",
  "pytest-playwright>=0.5",
  "ruff>=0.11,<1",
  "pytest-cov>=6,<7",
  "httpx2>=2.7,<3",
]

[project.scripts]
infinitas = "infinitas_skill.cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["LICENSE", "openapi.json", ".venv", "node_modules"]

[tool.setuptools.package-data]
server = [ "templates/*.html", "templates/partials/*.html", "static/css/*.css", "static/js/*.js", "static/js/modules/*.js", "locales/*.json",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
addopts = "--cov=src --cov=server --cov-report=term-missing --cov-report=xml"
markers = [
  "governance: pure-FS doc/catalog governance checks",
  "cli: exercises the infinitas CLI via subprocess",
  "server: needs the fastapi/httpx/jinja2/sqlalchemy TestClient stack",
  "e2e: needs a live uvicorn server / browser",
  "slow: long-running (release/reproducibility/transparency)",
  "alembic_partial: pins a non-head alembic revision",
]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "C90", "S",]
ignore = [ "S101", "S603", "S607", "S112",]

[tool.coverage.run]
source = [ "src", "server",]
omit = [ "*/tests/*", "*/test_*", "*/conftest.py", "*/templates/*", "/tmp/infinitas-*/repo/*",]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError", "pass",]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
where = [ ".", "src",]
include = [ "server*", "infinitas_skill*",]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"server/app.py" = [ "E501",]
"server/ui/formatting.py" = [ "E501",]
"server/ui/home.py" = [ "E501",]
"src/infinitas_skill/cli/reference.py" = [ "E501",]
"src/infinitas_skill/compatibility/checks.py" = [ "E501",]
"src/infinitas_skill/compatibility/contracts.py" = [ "E501",]
"src/infinitas_skill/compatibility/policy.py" = [ "E501",]
"src/infinitas_skill/install/planning.py" = [ "E501",]
"src/infinitas_skill/install/service.py" = [ "E402", "E501",]
"src/infinitas_skill/policy/cli.py" = [ "E501",]
"src/infinitas_skill/policy/service.py" = [ "E501",]
"src/infinitas_skill/registry/cli.py" = [ "E501",]
"src/infinitas_skill/release/service.py" = [ "E501",]
"src/infinitas_skill/release/state.py" = [ "E501",]
"src/infinitas_skill/server/backup.py" = [ "E501",]
"src/infinitas_skill/server/ops.py" = [ "E501",]
"src/infinitas_skill/server/systemd.py" = [ "E501",]
"tests/**" = [ "S105", "S106", "S108", "S310",]
"scripts/**" = [ "S105", "S108", "S310", "S603", "S607",]
"src/infinitas_skill/**" = [ "S105", "S202", "S310",]
"tests/integration/test_cli_release_state.py" = [ "E501",]
"tests/integration/test_cli_server_ops.py" = [ "E501",]
"tests/integration/test_private_registry_ui.py" = [ "E501",]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
